--- a/TechJobsMVCAutograded6/Views/Search/Index.cshtml
+++ b/TechJobsMVCAutograded6/Views/Search/Index.cshtml
@@ -27,7 +27,20 @@
     <hr />
 
     @* TODO #4 - Loop over the search results to display all job fields. *@
-
-
-
+     <table class="job-listing">
+            @foreach(var job in ViewBag.jobs)
+            {
+                <tr>
+                    <td>
+                        <p>ID: @job.Id</p>
+                        <p>Name: @job.Name</p>
+                        <p>Employer: @job.Employer</p>
+                        <p>Location: @job.Location</p>
+                        <p>Position Type: @job.PositionType</p>
+                        <p>Core Competency: @job.CoreCompetency</p>
+                    </td>
+                </tr>
+            }
+        </table>
 </div>
+
